--- a/my-app/package.json
+++ b/my-app/package.json
@@ -34,8 +34,8 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "next": "^15.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-shiki": "^0.9.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
